Fix a z-index issue on remote forms

--- a/app/assets/stylesheets/effective_bootstrap/forms.scss
+++ b/app/assets/stylesheets/effective_bootstrap/forms.scss
@@ -5,6 +5,8 @@
   position: relative;
 }
 
+.effective-form-flash { z-index: 1; }
+
 form[data-remote="true"]:not(.show-flash-success) {
   .effective-form-flash.alert-success { display: none; }
 }
